# python-ads-api

./: .gitignore  README.md  ads.dhall  ads.json  ads_cli.py  pyproject.toml  shell.nix
app/: ads_cli.py  db.py  main.py  pyproject.toml
app/tests/: test_routers.py
tests/: test_main.py  test_routers.py
