[tool.poetry]
name = "routers"
version = "0.1.0"
description = ""
authors = ["Jon Norman <jonte.n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {version = "^0.61.2", extras = ["all"]}
aiomisc = {version = "^11.1.0", extras = ["uvloop"]}
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
typer = "^0.3.2"
typer-cli = "^0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
